--- a/foundations/cascade/01-cascade-fix/solution/solution.html
+++ b/foundations/cascade/01-cascade-fix/solution/solution.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fix the Cascade</title>
     <link rel="stylesheet" href="solution.css">
+    
   </head>
   <body>
     <p class="para">I'm just a paragraph with extra bold text!</p>
@@ -21,3 +22,9 @@
     </div>
   </body>
 </html>
+
+
+
+
+
+helldhfjkjjkld
